changed some stuff to fix the logout issue 'cleared caching' and fixed the logout button to be more visible

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -264,19 +264,24 @@ body {
 }
 
 .logoutIcon {
-  background: #0f1319;
-  padding: 10px;
+  background: #46b4ae;
+  height: fit-content;
+  width: fit-content;
+  padding: 6px;
   border-radius: 12px;
   display: flex;
   justify-content: center;
   align-items: center;
+  align-self: start;
   width: 45px;
   cursor: pointer;
 }
 
 .logoutIcon:hover {
-  background: #010202;
+  background: #151b22;
   transition: all 0.3s ease-in-out;
+
+
 }
 
 .loadingContainer {
@@ -432,6 +437,11 @@ body {
       "audit-ratio";
     grid-template-columns: 1fr;
     gap: 10px;
+  }
+
+  .welcome-logout {
+    gap: 20px;
+    flex-direction: row-reverse;
   }
 
   .user-info {
